<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/searchBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/captionSearch"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dateContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/startDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/startDate"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:onClick="startSelect" />

                    <EditText
                        android:id="@+id/endDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/endDate"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:onClick="endSelect" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/topLeftLat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/topLeft1"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/topLeftLong"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/topLeft2"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/BotRightLat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/botLeftLat"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/BotRightLong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/botRightLong"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal" />
                </LinearLayout>

            </LinearLayout>

        <RadioGroup
            android:id="@+id/filterRadio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:checkedButton="@id/captionRadio"
            >
                <RadioButton
                    android:id="@+id/captionRadio"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/caption" />

                <RadioButton
                    android:id="@+id/dateRadio"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/date" />

                <RadioButton
                    android:id="@+id/searchArea"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/Coordinates" />
        </RadioGroup>
    </LinearLayout>
        <Button
            android:id="@+id/searchConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchByFilter"
            android:text="@string/filter" />

    </LinearLayout>

    <Button
        android:id="@+id/searchFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="endSearch"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>