<resources>
    <string name="app_name">Photogallery Application</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="snap">Snap</string>
    <string name="search">Search</string>
    <string name="timeStamp">Time</string>
    <string name="caption">Caption</string>
    <string name="searchText">Search photo album</string>
    <string name="enter">Enter</string>
    <string name="result">result</string>
    <string name="save">Save</string>
    <string name="Photo">Photo</string>
    <string name="done">Done</string>
    <string name="location">Location</string>
    <string name="filter">Filter</string>
    <string name="captionSearch">Search by Caption</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="topLeft">Top Left</string>
    <string name="bottomRight">Bottom Right</string>
    <string name="date">Date</string>
    <string name="Coordinates" >Search Area</string>
    <string name="topLeft1">Top Left Lat</string>
    <string name="topLeft2">Top Left Long</string>
    <string name="botLeftLat">Bot Right Lat</string>
    <string name="botRightLong">Bot Right Long</string>
    <string name="upload">Upload</string>
</resources>
